--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-cli": "~2.4.1",
     "@tauri-apps/plugin-opener": "^2",
+    "html2pdf.js": "^0.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
