--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ pulldown-cmark = "0.13.0"
 regex = "1.12.3"
 parking_lot = "0.12"
 tokio = { version = "1", features = ["fs"] }
+serde_yaml = "0.9.34"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-cli = "2"
