--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,6 +33,7 @@ regex = "1.12.3"
 parking_lot = "0.12"
 tokio = { version = "1", features = ["fs"] }
 serde_yaml = "0.9.34"
+urlencoding = "2.1.3"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-cli = "2"
